--- a/rs.Igramise/.classpath
+++ b/rs.Igramise/.classpath
@@ -3,5 +3,15 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/WD Elements Hard Disk/Nikola/Svasta/mysql-connector-java-5.1.42/mysql-connector-java-5.1.42-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/commons-digester-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/groovy-all-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/jtds-1.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/org.apache.commons.beanutils.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/org.apache.commons.collections.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/org-apache-commons-logging.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jaspery report jar/itextpdf-5.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Desktop/Jusper Reports/jasperreports-6.4.3/dist/jasperreports-6.4.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nikol/Downloads/itext-2.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
